--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,13 @@
   list-style: none;
   text-decoration: none;
   scroll-behavior: smooth;
+  outline: 0;
 }
 body {
-  background-color: #f4f5f7;
+  background-color: #f4f7f6;
+  display: block;
+  /*background: rgb(227,227,227);*/
+  /*background: linear-gradient(180deg, rgba(227,227,227,1) 0%, rgba(236,236,236,1) 50%, rgba(242,242,242,1) 100%);*/
 
 }
 html{
@@ -25,18 +29,32 @@ html{
   --main-background: rgb(231,158,143);
   --main-gradient: linear-gradient(117deg, rgba(231,158,143,1) 0%, rgba(218,162,118,1) 57%, rgba(194,101,139,1) 100%);
   --main-color: #f4f5f7;
+  --secondary-color: #232325;
+  --secondary-background: #f7f7f9;
+  --section-text-color: #555555;
 }
 h1,h2,h3,h4,h5,h6 {
-  font-size: 4rem;
   font-weight: 400;
+}
+h1 {
+  font-size: 4rem;
+  white-space: nowrap;
+}
+h2 {
+  color: var(--section-text-color);
+  font-size: 1.5rem;
+}
+h3 {
+  font-size: 3.5rem;
+  color: var(--secondary-color)
 }
 .container_large{
   width: 100%;
-  height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 section{
-  margin-top: 8rem;
+  margin-top: 16rem;
 }
